Fixed overflow in skill images

--- a/style/main.css
+++ b/style/main.css
@@ -231,8 +231,8 @@ body{
 }
 
 .skills img{
-    width: 180px;
-    height: 150px;
+    max-width: 180px;
+    max-height: 150px;
     margin: auto;
     display: block;
     margin-bottom: 10px;
